--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport"content="width=device-width, initial-scale=1.0"> 
         <meta name="author"  content="Gislene Rodrigues">      
-        <title>GN-VENDAS</title>
+        <title>SISTEMA DE VENDAS</title>
 
         <link rel="stylesheet" href="css/style.css">
 
@@ -15,7 +15,7 @@
     <body>
 
         <header>
-            <h1>Sistema de Vendas | GN-VENDAS</h1>
+            <h1>Sistema de Vendas | GR-VENDAS</h1>
         </header>
 
         <div class= "box">
@@ -123,7 +123,6 @@
                 <br></br>
                 <table>
                     <thead>
-                        <th class="center">LinkdoPDF</th>
                         <th class="center">IDdoboleto</th>
                         <th class="center">IDdoProduto</th>
                         <th class="center">Nome cliente</th>
